cabal-version:      2.4
name:               curl
version:            2.0
synopsis:           Haskell binding to libcurl
description:
  libcurl is a client-side URL transfer library, supporting FTP, FTPS, HTTP,
  HTTPS, SCP, SFTP, TFTP, TELNET, DICT, LDAP, LDAPS and FILE.
  libcurl supports SSL certificates, HTTP POST, HTTP PUT, FTP uploading,
  HTTP form based upload, proxies, cookies, user+password authentication
  (Basic, Digest, NTLM, Negotiate, Kerberos4), file transfer resume,
  http proxy tunneling and more!
  .
  This package provides Haskell bindings to libcurl and is a fork of the
  original curl library from Galois Inc

category:           Network
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sigbjorn Finne
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Network.Curl
    Network.Curl.Easy
    Network.Curl.Info
    Network.Curl.Opts
    Network.Curl.Post
    Network.Curl.Types

  hs-source-dirs:     src
  include-dirs:       cbits
  c-sources:          cbits/curlc.c
  extra-libraries:    curl
  default-extensions:
    CPP
    DeriveGeneric
    DerivingStrategies
    ForeignFunctionInterface
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wmissing-deriving-strategies

  build-depends:
    , base        <5
    , bytestring  >=0.9
    , containers
    , exceptions

source-repository head
  type:     git
  location: git://github.com/galoisinc/curl.git
