cabal-version:      2.4
name:               curl
version:            2.0
synopsis:           Haskell binding to libcurl
description:
  libcurl is a client-side URL transfer library, supporting FTP, FTPS, HTTP,
  HTTPS, SCP, SFTP, TFTP, TELNET, DICT, LDAP, LDAPS and FILE.
  libcurl supports SSL certificates, HTTP POST, HTTP PUT, FTP uploading,
  HTTP form based upload, proxies, cookies, user+password authentication
  (Basic, Digest, NTLM, Negotiate, Kerberos4), file transfer resume,
  http proxy tunneling and more!
  .
  This package provides Haskell bindings to libcurl and is a fork of the
  original curl library from Galois Inc

category:           Network
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sigbjorn Finne
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Curl
    Curl.Internal
    Curl.Internal.Easy
    Curl.Internal.Info
    Curl.Internal.Mime
    Curl.Internal.Opts
    Curl.Internal.Post
    Curl.Internal.Types
    Curl.Opts
    Curl.Types

  hs-source-dirs:     src
  include-dirs:       cbits
  c-sources:          cbits/curlc.c
  extra-libraries:    curl
  default-extensions:
    CPP
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    EmptyDataDecls
    ForeignFunctionInterface
    ForeignFunctionInterface
    LambdaCase
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wmissing-deriving-strategies

  build-depends:
    , base              <5
    , bytestring        >=0.9
    , case-insensitive
    , containers
    , exceptions
    , http-api-data
    , http-types
    , uri-bytestring

source-repository head
  type:     git
  location: git://github.com/galoisinc/curl.git
